fixed the dygraph legend alignment

--- a/src/components/graph/graphComponent.css
+++ b/src/components/graph/graphComponent.css
@@ -7,11 +7,12 @@
 } 
 .dygraph-legend {
     position: absolute;
-    top:10px;
+    top:310px !important;
     font-size: 14px;
     z-index: 10;
     width: 100%;
     background: #fff;
     line-height: normal;
     text-align: center;
+    
 }
